Función para registrar movimientos de tipo adición Se creo un manager para manejar la transacción de registro en movimiento_proceso_externo y movimiento_detalle issue #12
