# swagger/swagger.json
@@ -361,6 +361,34 @@
                 }
             }
         },
+        "/movimiento_proceso_externoregistrar_movimiento": {
+            "post": {
+                "tags": [
+                    "movimiento_proceso_externo"
+                ],
+                "description": "Registra un movimiento completamente, tanto el de proceso externo como el detalle",
+                "operationId": "MovimientoProcesoExternoController.RegistrarMovimiento",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "map[string]interface{}",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/map[string]interface{}"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "{int} models.MovimientoProcesoExterno"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
         "/tipo_movimiento/": {
             "get": {
                 "tags": [
@@ -536,6 +564,10 @@
         }
     },
     "definitions": {
+        "map[string]interface{}": {
+            "title": "map[string]interface{}",
+            "type": "object"
+        },
         "models.MovimientoDetalle": {
             "title": "MovimientoDetalle",
             "type": "object",
@@ -551,7 +583,7 @@
                     "type": "integer",
                     "format": "int64"
                 },
-                "MovimientoId": {
+                "MovimientoProcesoExternoId": {
                     "$ref": "#/definitions/models.MovimientoProcesoExterno"
                 },
                 "Valor": {
